CHATS_SIT/force-app/main/default/objects/T_FISCAL_RAT_FEES__c.object
<CustomObject>
    <fields>
        <fullName>AMT_ACT_CTY__c</fullName>
        <description>Activity Fee</description>
        <label>Activity Fee</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AMT_ACT_FA__c</fullName>
        <description>Activity Fee</description>
        <label>Activity Fee</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AMT_ACT_PROVR__c</fullName>
        <description>Activity Fee</description>
        <label>Activity Fee</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AMT_REG_CTY__c</fullName>
        <description>Registration Fee</description>
        <label>Registration Fee</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AMT_REG_FA__c</fullName>
        <description>Registration Fee</description>
        <label>Registration Fee</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AMT_REG_PROVR__c</fullName>
        <description>Registration Fee</description>
        <label>Registration Fee</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AMT_TRANS_CTY__c</fullName>
        <description>Transportation Fee</description>
        <label>Transportation Fee</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AMT_TRANS_FA__c</fullName>
        <description>Transportation Fee</description>
        <label>Transportation Fee</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AMT_TRANS_PROVR__c</fullName>
        <description>Transportation Fee</description>
        <label>Transportation Fee</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CDE_ACT_FREQ__c</fullName>
        <description>Activity Frequency</description>
        <label>Activity Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00744</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDE_REG_FREQ__c</fullName>
        <description>Registration Frequency</description>
        <label>Registration Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00744</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDE_TRANS_FREQ__c</fullName>
        <description>Transportation Frequency</description>
        <label>Transportation Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00744</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IDN_EXTNL__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>ART Fees External Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IDN_FISCAL_SCH__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Rate Schedule</description>
        <label>Rate Schedule</label>
        <referenceTo>T_FISCAL_SCH__c</referenceTo>
        <relationshipLabel>ART Fees</relationshipLabel>
        <relationshipName>RAT_Fees</relationshipName>
        <type>Lookup</type>
    </fields>
	<fields>
        <fullName>TXT_ACT_MONTH__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Months not to pay Activity Fee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TXT_REG_MONTH__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Months not to pay Registration Fee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TXT_TRANS_MONTH__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Months not to pay Transportation Fee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ART Fees</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ART Fees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>